bk_ida/gccida/c3/print_node
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:649:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+184h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:674:11: error: use of undeclared identifier 'table_0'; did you mean 'table'?
for ( b = table_0[hash]; b; b = b->next ) 
          ^~~~~~~
          table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:40:24: note: 'table' declared here
static struct bucket **table;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:681:11: error: use of undeclared identifier 'table_0'; did you mean 'table'?
b->next = table_0[hash]; 
          ^~~~~~~
          table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:40:24: note: 'table' declared here
static struct bucket **table;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:682:1: error: use of undeclared identifier 'table_0'; did you mean 'table'?
table_0[hash] = b; 
^~~~~~~
table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:40:24: note: 'table' declared here
static struct bucket **table;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:774:29: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
first_rtl = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&nodea->common + 4)); 
                            ^~~~~~~~~
                            tree_cons
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:774:41: error: expected expression
first_rtl = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&nodea->common + 4)); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:826:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.print_identifier( filea, nodea, indenta); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:851:17: error: expected expression
if ( *( _OWORD *)&nodea->block.vars <= __PAIR128__( -1LL, 0LL) ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:851:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&nodea->block.vars <= __PAIR128__( -1LL, 0LL) ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:909:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.print_xnode( filea, nodea, indenta); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:1067:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.print_decl( filea, nodea, indenta); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/print-tree.c:1200:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.print_type( filea, nodea, indenta); 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_node/src/obj/print-tree.o] Error 1
